fix min-height issue on ios safari browser, remove -webkit-fill-available

--- a/css/main.css
+++ b/css/main.css
@@ -325,7 +325,7 @@ lottie-player {
         height: 80vh;
         border-radius: 15px;
         min-height: 80vh;
-        min-height: -webkit-fill-available;
+        /*min-height: -webkit-fill-available;*/
     }
 
     .app-container, .cover-container, .heading-container, .final-results-container {
